--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -58,7 +58,9 @@ header h1 {
   cursor: pointer;
   color: #bbb;
 }
-
+.task i.active{
+  color: #ff005d
+}
 /* filter nav */
 .filter {
   width: 640px;
@@ -75,4 +77,26 @@ header h1 {
   cursor: pointer;
   font-size: 0.8em;
   font-size: 1em;
+}
+
+.new-task-form{
+  background: #e7e7e7;
+  padding: 20px 0;
+}
+
+form {
+  max-width: 400px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  gap: 10px;
+}
+
+form input{
+  border: 0;
+  padding: 10px;
+  border-radius: 6px;
+  color: #555;
+  font-size: 1em;
+
 }
